# paddle_api

./: .bumpversion.cfg  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  makefile  mkdocs.yml  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml
docs/: api.md  installation.md  usage.md
paddle_api/: __init__.py  paddle_api.py  type_defs.py
tests/: __init__.py  test_paddle_api.py
