[tool]
[tool.poetry]
name = "paddle_api"
version = "0.1.0"
homepage = "https://github.com/Korben11/paddle_api"
description = "The complete payments, tax, and subscriptions solution for SaaS."
authors = ["Juraj Korbačka <jkorbacka@gmail.com>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "paddle_api" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

black  = { version = "^23.3.0", optional = true}
isort  = { version = "^5.8.0", optional = true}
flake8  = { version = "^5.0.4", optional = true}
flake8-docstrings = { version = "^1.6.0", optional = true }
mypy = {version = "^v0.991", optional = true}
pytest  = { version = "^7.3.1", optional = true}
pytest-mock  = { version = "^3.10.0", optional = true}
types-requests  = { version = "^2.28.11.17", optional = true}
pytest-cov  = { version = "^4.0.0", optional = true}
tox  = { version = "^4.4.12", optional = true}
virtualenv  = { version = "^20.2.2", optional = true}
pip  = { version = "^23.1", optional = true}
mkdocs  = { version = "^1.1.2", optional = true}
mkdocs-include-markdown-plugin  = { version = "^3.9.1", optional = true}
mkdocs-material  = { version = "^9.1.6", optional = true}
mkdocstrings-python  = { version = "^0.9.0", optional = true}
mkdocs-material-extensions  = { version = "^1.0.1", optional = true}
twine  = { version = "^4.0.2", optional = true}
mkdocs-autorefs = {version = "^0.4.1", optional = true}
pre-commit = {version = "^3.2.2", optional = true}
toml = {version = "^0.10.2", optional = true}
bump2version = {version = "^1.0.1", optional = true}
requests = "^2.28.2"
dataclass-wizard = "^0.22.2"

[tool.poetry.extras]
test = [
    "pytest",
    "pytest-mock",
    "black",
    "isort",
    "mypy",
    "types-requests",
    "flake8",
    "flake8-docstrings",
    "pytest-cov"
    ]

dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml", "bump2version"]

doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings-python",
    "mkdocs-material-extension",
    "mkdocs-autorefs"
    ]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
